Bug 290387 - Kwin crashed after move an application to another virtual desktop
Summary: Kwin crashed after move an application to another virtual desktop
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-02 11:49 UTC by Marian Kyral
Modified: 2012-01-02 18:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marian Kyral 2012-01-02 11:49:25 UTC
Application: kwin (4.7.95 (4.8 RC1 (4.7.95))
KDE Platform Version: 4.7.95 (4.8 RC1 (4.7.95) (Compiled from sources)
Qt Version: 4.7.4
Operating System: Linux 3.1.4-gentoo x86_64
Distribution: "Gentoo Base System release 2.1"

-- Information about the crash:
- What I was doing when the application crashed:

I wanted to move the Tora application from desktop 3 to desktop 1 (I have 2x2 desktops). On task manager I right click on the Tora icon and choose "Move to desktop > Desktop 1". Kwin crashed.

-- Backtrace:
Application: KWin (kwin), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f09795807a0 (LWP 10369))]

Thread 2 (Thread 0x7f09606b7700 (LWP 10375)):
#0  0x00007f097400154c in pthread_cond_wait () from /lib64/libpthread.so.0
#1  0x00007f0975721594 in QTWTF::TCMalloc_PageHeap::scavengerThread() () from /usr/lib64/qt4/libQtScript.so.4
#2  0x00007f09757215c9 in QTWTF::TCMalloc_PageHeap::runScavengerThread(void*) () from /usr/lib64/qt4/libQtScript.so.4
#3  0x00007f0973ffcd0c in start_thread () from /lib64/libpthread.so.0
#4  0x00007f0978d878dd in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f09795807a0 (LWP 10369)):
[KCrash Handler]
#6  KWin::Client::isMinimized (this=0xf000000ffdfdfdf) at /var/tmp/portage/kde-base/kwin-4.7.95/work/kwin-4.7.95/kwin/client.h:837
#7  0x00007f097909508f in KWin::ClientGroup::updateStates (this=0x20a73b0, main=0x20e9c60, only=0x0) at /var/tmp/portage/kde-base/kwin-4.7.95/work/kwin-4.7.95/kwin/clientgroup.cpp:275
#8  0x00007f097908fbdc in KWin::Client::setDesktop (this=0x20e9c60, desktop=1) at /var/tmp/portage/kde-base/kwin-4.7.95/work/kwin-4.7.95/kwin/client.cpp:1607
#9  0x00007f09790951d3 in KWin::ClientGroup::updateStates (this=0x20a73b0, main=0x2096d20, only=0x0) at /var/tmp/portage/kde-base/kwin-4.7.95/work/kwin-4.7.95/kwin/clientgroup.cpp:286
#10 0x00007f097908fbdc in KWin::Client::setDesktop (this=0x2096d20, desktop=1) at /var/tmp/portage/kde-base/kwin-4.7.95/work/kwin-4.7.95/kwin/client.cpp:1607
#11 0x00007f097907b518 in KWin::Workspace::sendClientToDesktop (this=0x1d81030, c=0x2096d20, desk=1, dont_activate=true) at /var/tmp/portage/kde-base/kwin-4.7.95/work/kwin-4.7.95/kwin/workspace.cpp:1629
#12 0x00007f0978935b97 in NETWinInfo::event (this=0x2095ae0, event=0x7fff686ed330, properties=0x7fff686ecad0, properties_size=2) at /var/tmp/portage/kde-base/kdelibs-4.7.95/work/kdelibs-4.7.95/kdeui/windowmanagement/netwm.cpp:3792
#13 0x00007f09790ab004 in KWin::Client::windowEvent (this=0x2096d20, e=0x7fff686ed330) at /var/tmp/portage/kde-base/kwin-4.7.95/work/kwin-4.7.95/kwin/events.cpp:546
#14 0x00007f09790ab435 in KWin::Workspace::workspaceEvent (this=0x1d81030, e=0x7fff686ed330) at /var/tmp/portage/kde-base/kwin-4.7.95/work/kwin-4.7.95/kwin/events.cpp:293
#15 0x00007f09790a0fa9 in KWin::Application::x11EventFilter (this=0x7fff686ed5a0, e=0x7fff686ed330) at /var/tmp/portage/kde-base/kwin-4.7.95/work/kwin-4.7.95/kwin/main.cpp:359
#16 0x00007f09735aa0f5 in qt_x11EventFilter(_XEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#17 0x00007f09735b8747 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#18 0x00007f09735e10d1 in QEventDispatcherX11::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtGui.so.4
#19 0x00007f0974373442 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#20 0x00007f0974373684 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#21 0x00007f0974377b0b in QCoreApplication::exec() () from /usr/lib64/qt4/libQtCore.so.4
#22 0x00007f09790a2692 in kdemain (argc=<optimized out>, argv=0x7fff686edb78) at /var/tmp/portage/kde-base/kwin-4.7.95/work/kwin-4.7.95/kwin/main.cpp:525
#23 0x00007f0978ccd22d in __libc_start_main () from /lib64/libc.so.6
#24 0x0000000000400789 in _start ()

Reported using DrKonqi
Comment 1 Thomas Lübking 2012-01-02 15:20:40 UTC
>  KWin::Client::isMinimized (this=0xf000000ffdfdfdf) at

And I just thought "seems tabbing is finally fixed" - *sigh*

Did the window happen to have been member of a group of tabbed windows?
Comment 2 Thomas Lübking 2012-01-02 16:08:16 UTC
https://git.reviewboard.kde.org/r/103612/
Comment 3 Marian Kyral 2012-01-02 16:18:05 UTC
Well, it is possible, but I'm not sure in this case. I'm not using grouping, but I have to restart kwin from time to time because of another cpu usage bug. And after restart, some windows are grouped, even before were all separated. I think, restart of kwin should not group previously ungrouped windows. But this is different issue. Maybe is already reported.

I'm using the "kwin --replace" command.
Comment 4 Thomas Lübking 2012-01-02 16:20:45 UTC
You can forget about this report - it's fixed and will automatically be closed when the fix is committed to the code repository.

Re-grouping windows is done heuristically - that's far less than optimal but the tabbing code has other issues than this :-(
Comment 5 Martin Flöser 2012-01-02 16:25:57 UTC
> >  KWin::Client::isMinimized (this=0xf000000ffdfdfdf) at
> 
> And I just thought "seems tabbing is finally fixed" - *sigh*
yep, I sighed as well when I saw the crash report :-(
Comment 6 Thomas Lübking 2012-01-02 17:54:38 UTC
Git commit 67b3dc9e619b60552ddf1c6506453037cd7830cf by Thomas Lübking.
Committed on 02/01/2012 at 18:12.
Pushed by luebking into branch 'master'.

Fix one list pollution in tabbing code

REVIEW: 103612

M  +27   -23   kwin/clientgroup.cpp

http://commits.kde.org/kde-workspace/67b3dc9e619b60552ddf1c6506453037cd7830cf
Comment 7 Thomas Lübking 2012-01-02 18:22:55 UTC
Git commit 7b3df4a02ecb0d234ea4567441d0d686a000a9a1 by Thomas Lübking.
Committed on 02/01/2012 at 18:12.
Pushed by luebking into branch 'KDE/4.8'.

Fix one list pollution in tabbing code

REVIEW: 103612
(cherry picked from commit 67b3dc9e619b60552ddf1c6506453037cd7830cf)

M  +27   -23   kwin/clientgroup.cpp

http://commits.kde.org/kde-workspace/7b3df4a02ecb0d234ea4567441d0d686a000a9a1