Fix one list pollution in tabbing code

REVIEW: 103612
BUG: 290387